# FastApiPython

./: alembic.ini  api.py  config.py  models.py  pyproject.toml  response_models.py
alembic/versions/: 0695efadf792_comment.py
